feat: add login buttons
add login buttons of  facbook & google

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -159,8 +159,8 @@
   <footer class="container">
     <div class="flex-container">
       <div class="row">
-        <div class="column">
-          <div class="card">
+        <div class="col-lg">
+          <div class="card h-100">
             <h4 class="card-title">Discover Deliveroo</h4>
             <ul class="list-unstyled mb-0">
               <li>
@@ -199,8 +199,8 @@
             </ul>
           </div>
         </div>
-        <div class="column">
-          <div class="card">
+        <div class="col-lg">
+          <div class="card h-100">
             <h4 class="card-title">Legal</h4>
             <ul class="list-unstyled mb-0">
               <li>
@@ -224,8 +224,8 @@
             </ul>
           </div>
         </div>
-        <div class="column">
-          <div class="card">
+        <div class="col-lg">
+          <div class="card h-100">
             <h4 class="card-title">Help</h4>
             <ul class="list-unstyled mb-0">
               <li>
@@ -243,8 +243,8 @@
             </ul>
           </div>
         </div>
-        <div class="column">
-          <div class="card">
+        <div class="col-lg">
+          <div class="card h-100">
             <h4 class="card-title">Take Deliveroo with you</h4>
             <ul class="list-unstyled mb-0">
               <li>
