--- a/src/app/common/footer/footer.component.scss
+++ b/src/app/common/footer/footer.component.scss
@@ -44,7 +44,7 @@
 .background-color-footer {
   background-color: #2e3333;
 }
-.column {
+.col-lg {
   float: left;
   width: 25%;
   padding: 0 10px;
@@ -59,6 +59,7 @@
   text-align: start;
   font-family: plex-sans,sans-serif;
   background-color: #444444;
+
 }
 h4 {
     color: aliceblue;
