--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,1 +1,139 @@
-<p>login-page works!</p>
+<!-- <div
+  class="fb-login-button"
+  data-width=""
+  data-size="large"
+  data-button-type="continue_with"
+  data-auto-logout-link="false"
+  data-use-continue-as="false"
+></div>
+
+<script>
+  var finished_rendering = function () {
+    console.log("finished rendering plugins");
+    var spinner = document.getElementById("spinner");
+    spinner.removeAttribute("style");
+    spinner.removeChild(spinner.childNodes[0]);
+  };
+  FB.Event.subscribe("xfbml.render", finished_rendering);
+</script>
+<div
+  id="spinner"
+  style="
+    background: #4267b2;
+    border-radius: 5px;
+    color: white;
+    height: 40px;
+    text-align: center;
+    width: 250px;
+  "
+>
+  Loading
+  <div
+    class="fb-login-button"
+    data-max-rows="1"
+    data-size="large"
+    data-button-type="continue_with"
+    data-use-continue-as="true"
+  ></div>
+</div>
+
+<div
+  class="fb-login-button"
+  data-max-rows="1"
+  data-size="<medium, large>"
+  data-button-type="continue_with"
+  data-width="<100% or px>"
+  data-scope="<comma separated list of permissions, e.g. public_profile, email>"
+></div> -->
+<html>
+  <head>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://apis.google.com/js/api:client.js"></script>
+    <script>
+      var googleUser = {};
+      var startApp = function () {
+        gapi.load("auth2", function () {
+          // Retrieve the singleton for the GoogleAuth library and set up the client.
+          auth2 = gapi.auth2.init({
+            client_id: "YOUR_CLIENT_ID.apps.googleusercontent.com",
+            cookiepolicy: "single_host_origin",
+            // Request scopes in addition to 'profile' and 'email'
+            //scope: 'additional_scope'
+          });
+          attachSignin(document.getElementById("customBtn"));
+        });
+      };
+
+      function attachSignin(element) {
+        console.log(element.id);
+        auth2.attachClickHandler(
+          element,
+          {},
+          function (googleUser) {
+            document.getElementById("name").innerText =
+              "Signed in: " + googleUser.getBasicProfile().getName();
+          },
+          function (error) {
+            alert(JSON.stringify(error, undefined, 2));
+          }
+        );
+      }
+    </script>
+    <style type="text/css">
+      #customBtn {
+        display: inline-block;
+        background: white;
+        color: #444;
+        width: 190px;
+        border-radius: 5px;
+        border: thin solid #888;
+        box-shadow: 1px 1px 1px grey;
+        white-space: nowrap;
+      }
+      #customBtn:hover {
+        cursor: pointer;
+      }
+      span.label {
+        font-family: serif;
+        font-weight: normal;
+      }
+      span.icon {
+        background: url("/identity/sign-in/g-normal.png") transparent 5px 50%
+          no-repeat;
+        display: inline-block;
+        vertical-align: middle;
+        width: 42px;
+        height: 42px;
+      }
+      span.buttonText {
+        display: inline-block;
+        vertical-align: middle;
+        padding-left: 42px;
+        padding-right: 42px;
+        font-size: 14px;
+        font-weight: bold;
+        /* Use the Roboto font that is loaded in the <head> */
+        font-family: "Roboto", sans-serif;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- In the callback, you would hide the gSignInWrapper element on a
+  successful sign in -->
+    <div id="gSignInWrapper">
+      <span class="label">Sign in with:</span>
+      <div id="customBtn" class="customGPlusSignIn">
+        <span class="icon"></span>
+        <span class="buttonText">Google</span>
+      </div>
+    </div>
+    <div id="name"></div>
+    <script>
+      startApp();
+    </script>
+  </body>
+</html>
