--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -13,20 +12,27 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $deliveroo-clone-primary: mat.define-palette(mat.$indigo-palette);
-$deliveroo-clone-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$deliveroo-clone-accent: mat.define-palette(
+  mat.$pink-palette,
+  A200,
+  A100,
+  A400
+);
 
 // The warn palette is optional (defaults to red).
 $deliveroo-clone-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$deliveroo-clone-theme: mat.define-light-theme((
-  color: (
-    primary: $deliveroo-clone-primary,
-    accent: $deliveroo-clone-accent,
-    warn: $deliveroo-clone-warn,
+$deliveroo-clone-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $deliveroo-clone-primary,
+      accent: $deliveroo-clone-accent,
+      warn: $deliveroo-clone-warn,
+    ),
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -35,5 +41,11 @@ $deliveroo-clone-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: "IBM Plex Sans", sans-serif;
+}
