feat: add home and menu icons

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -3,7 +3,7 @@
   <footer class="container">
     <div class="flex-container">
       <div class="row">
-        <div class="col-lg">
+        <div class="col-lg col-sm-6 col-md-3">
           <div class="card h-100">
             <h4 class="card-title">Discover Deliveroo</h4>
             <ul class="list-unstyled mb-0">
