feat: footer and header changes
add heder home and menu icons and changes in footer UI/UX

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,160 +1,165 @@
-<!-- New code -->
-<section class="background-color-footer">
-  <footer class="container">
-    <div class="flex-container">
-      <div class="row">
-        <div class="col-lg col-sm-6 col-md-3">
-          <div class="card h-100">
-            <h4 class="card-title">Discover Deliveroo</h4>
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a href="#!" class="text-white">Investors</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">About us</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Takeaway</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">More</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Newsroom</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Engineering blog</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Design blog</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Gift Cards</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Careers</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Restaurant signup</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Become a rider</a>
-              </li>
-            </ul>
-          </div>
+<footer class="dc">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-sm-6 col-md-3" style="padding-bottom: 20px">
+        <div class="card h-100">
+          <h3 class="card__title">Discover Deliveroo</h3>
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Investors</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">About us</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Takeaway</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">More</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Newsroom</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Engineering blog</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Design blog</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Gift Cards</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Careers</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Restaurant signup</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Become a rider</a>
+            </li>
+          </ul>
         </div>
-        <div class="col-lg">
-          <div class="card h-100">
-            <h4 class="card-title">Legal</h4>
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a href="#!" class="text-white">Terms and conditions</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Privacy</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Cookies</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Modern Slavery Statement</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Tax Strategy</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Section 172 Statement</a>
-              </li>
-            </ul>
-          </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-3" style="padding-bottom: 20px">
+        <div class="card h-100">
+          <h3 class="card__title">Legal</h3>
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="dc__text">Terms and conditions</a>
+            </li>
+            <li>
+              <a href="#!" class="dc__text">Privacy</a>
+            </li>
+            <li>
+              <a href="#!" class="dc__text">Cookies</a>
+            </li>
+            <li>
+              <a href="#!" class="dc__text">Modern Slavery Statement</a>
+            </li>
+            <li>
+              <a href="#!" class="dc__text">Tax Strategy</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Section 172 Statement</a>
+            </li>
+          </ul>
         </div>
-        <div class="col-lg">
-          <div class="card h-100">
-            <h4 class="card-title">Help</h4>
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a href="#!" class="text-white">Contact</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">FAQs</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Cuisines</a>
-              </li>
-              <li>
-                <a href="#!" class="text-white">Brands</a>
-              </li>
-            </ul>
-          </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-3" style="padding-bottom: 20px">
+        <div class="card h-100">
+          <h3 class="card__title">Help</h3>
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Contact</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">FAQs</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Cuisines</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Brands</a>
+            </li>
+          </ul>
         </div>
-        <div class="col-lg">
-          <div class="card h-100">
-            <h4 class="card-title">Take Deliveroo with you</h4>
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a
-                  href="https://apps.apple.com/us/app/deliveroo-food-delivery-app/id1001501844"
-                >
-                  <img
-                    src="assets\svg\Download_on_the_App_Store_RGB_blk.svg"
-                    alt="AppStore"
-                    height="40"
-                    width="250"
-                  />
-                </a>
-              </li>
-              <br />
-              <li>
-                <a
-                  href="https://play.google.com/store/apps/details?id=com.deliveroo.orderapp&hl=en&gl=US&pli=1"
-                >
-                  <img
-                    src="assets\svg\Google_Play_Store_badge_EN.svg"
-                    alt="google play store"
-                    height="40"
-                    width="230"
-                  />
-                </a>
-              </li>
-            </ul>
-          </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-3" style="padding-bottom: 20px">
+        <div class="card h-100">
+          <h3 class="card__title">Take Deliveroo with you</h3>
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a
+                href="https://apps.apple.com/us/app/deliveroo-food-delivery-app/id1001501844"
+              >
+                <img
+                  src="assets\svg\Download_on_the_App_Store_RGB_blk.svg"
+                  alt="AppStore"
+                  height="40"
+                  width="250"
+                />
+              </a>
+            </li>
+            <br />
+            <li>
+              <a
+                href="https://play.google.com/store/apps/details?id=com.deliveroo.orderapp&hl=en&gl=US&pli=1"
+              >
+                <img
+                  src="assets\svg\Google_Play_Store_badge_EN.svg"
+                  alt="google play store"
+                  height="40"
+                  width="230"
+                />
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="row">
-      <div class="column">
-        <a href="https://www.facebook.com/Deliveroo/">
-          <img
-            src="assets\svg\facebook-svgrepo-com.svg"
-            alt="facebook"
-            height="35"
-            width="35"
-            class="change-my-color"
-          />
-        </a>
-        <a
-          href="https://twitter.com/i/flow/login?redirect_after_login=%2FDeliveroo%3Fref_src%3Dtwsrc%255Egoogle%257Ctwcamp%255Eserp%257Ctwgr%255Eauthor"
-        >
-          <img
-            src="assets\svg\twitter-svgrepo-com.svg"
-            alt="twitter"
-            height="35"
-            width="35"
-          />
-        </a>
-        <a href="https://www.instagram.com/deliveroo/?hl=en">
-          <img
-            src="assets\svg\instagram-svgrepo-com.svg"
-            alt="instagram"
-            height="35"
-            width="35"
-          />
-        </a>
-      </div>
-      <div class="column">
+  <div class="row">
+    <div class="d-flex justify-content-between">
+      <div class="col-12 col-sm-6 col-md-3">
+        <ul class="list-unstyled mb-0 list-group list-group-horizontal">
+          <li>
+            <a href="https://www.facebook.com/Deliveroo/">
+              <img
+                src="assets\svg\facebook-svgrepo-com.svg"
+                alt="facebook"
+                height="35"
+                width="35"
+                class="change-my-color"
+              />
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://twitter.com/i/flow/login?redirect_after_login=%2FDeliveroo%3Fref_src%3Dtwsrc%255Egoogle%257Ctwcamp%255Eserp%257Ctwgr%255Eauthor"
+            >
+              <img
+                src="assets\svg\twitter-svgrepo-com.svg"
+                alt="twitter"
+                height="35"
+                width="35"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/deliveroo/?hl=en">
+              <img
+                src="assets\svg\instagram-svgrepo-com.svg"
+                alt="instagram"
+                height="35"
+                width="35"
+              />
+            </a>
+          </li>
+        </ul>
         <p style="color: aliceblue">© 2023 Deliveroo</p>
       </div>
     </div>
-  </footer>
-</section>
+  </div>
+</footer>
