feat: login page clone
login page clone

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -127,7 +127,7 @@
           <li>
             <a href="https://www.facebook.com/Deliveroo/">
               <img
-                src="assets\svg\facebook-svgrepo-com.svg"
+                src="assets\svg\facebook-icon.svg"
                 alt="facebook"
                 height="35"
                 width="35"
