feat: text align to the container
or text centered to the container

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -20,7 +20,7 @@
         <img src="assets\svg\apple-icon.svg" alt="Apple" height="24px" />
         Continue with Apple
       </button>
-      <p class="dc_line">or</p>
+      <p class="dc__line">or</p>
       <button mat-button class="dc__button--green">
         <img src="assets\svg\email-icon.svg" alt="Email" height="24px" />
         Continue with email
