feat: put a tags
Put <a> tags in the paragraph

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -26,10 +26,10 @@
         Continue with email
       </button>
       <p class="dc__text">
-        By continuing you agree to our T&Cs. Please also check out our Privacy
-        Policy. We use your data to offer you a personalised experience and to
-        better understand and improve our services. For more information see
-        here.
+        By continuing you agree to our <a href="">T&Cs</a>. Please also check
+        out our <a href="">Privacy Policy</a>. We use your data to offer you a
+        personalised experience and to better understand and improve our
+        services. <a href="">For more information see here</a>.
       </p>
     </div>
   </div>
