--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -8,17 +8,27 @@
             alt="deliveroo-logo"
             style="width: 121px; height: 32px"
           />
-        </div>
-        <div class="d-flex justify-content-end">
-          <button mat-stroked-button>Partner with us</button>
-          <button mat-stroked-button>
-            <img src="assets\svg\home.svg" alt="menu" height="20" width="20" />
-            Signup or login
-          </button>
-          <button mat-stroked-button>
-            <img src="assets\svg\menu.svg" alt="menu" height="16" width="16" />
-            Menu
-          </button>
+          <div class="d-flex justify-content-end">
+            <button mat-stroked-button>Partner with us</button>
+            <button mat-stroked-button>
+              <img
+                src="assets\svg\home.svg"
+                alt="menu"
+                height="20"
+                width="20"
+              />
+              Signup or login
+            </button>
+            <button mat-stroked-button>
+              <img
+                src="assets\svg\menu.svg"
+                alt="menu"
+                height="16"
+                width="16"
+              />
+              Menu
+            </button>
+          </div>
         </div>
       </div>
     </div>
