feat: changes in header
changes in header component

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -97,7 +97,7 @@
                 href="https://apps.apple.com/us/app/deliveroo-food-delivery-app/id1001501844"
               >
                 <img
-                  src="assets\svg\Download_on_the_App_Store_RGB_blk.svg"
+                  src="assets\svg\app store.svg"
                   alt="AppStore"
                   height="40"
                 />
