--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,36 +1,25 @@
 <header>
-  <section class="background-color-header">
-    <div class="container">
-      <div class="d-flex justify-content-start">
-        <div class="row">
-          <img
-            src="assets\svg\cdnlogo.com_deliveroo.svg"
-            alt="deliveroo-logo"
-            style="width: 121px; height: 32px"
-          />
-          <div class="d-flex justify-content-end">
-            <button mat-stroked-button>Partner with us</button>
-            <button mat-stroked-button>
-              <img
-                src="assets\svg\home.svg"
-                alt="menu"
-                height="20"
-                width="20"
-              />
-              Signup or login
-            </button>
-            <button mat-stroked-button>
-              <img
-                src="assets\svg\menu.svg"
-                alt="menu"
-                height="16"
-                width="16"
-              />
-              Menu
-            </button>
-          </div>
+  <div class="container">
+    <div class="row">
+      <div class="d-flex justify-content: space-between">
+        <img
+          src="assets\svg\deliveroo-logo.svg"
+          alt="deliveroo-logo"
+          style="width: 144px; height: 32px"
+        />
+        <div class="d-flex justify-content-space-between">
+          <button mat-stroked-button>Partner with us</button>
+          <button mat-stroked-button>
+            <img src="assets\svg\home.svg" alt="menu" height="20" width="20" />
+            Signup or login
+          </button>
+          <button mat-stroked-button>
+            <img src="assets\svg\menu.svg" alt="menu" height="16" width="16" />
+            Menu
+          </button>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+  <hr />
 </header>
