feat: footer padding changes
changes in footer paddings

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -119,51 +119,46 @@
         </div>
       </div>
     </div>
-  </div>
-
-  <div class="row">
-    <div class="col-12 col-sm-6 col-md-3">
-      <div class="grid-container">
-        <div class="grid-item">
-          <ul class="list-unstyled mb-0 list-group list-group-horizontal">
-            <li>
-              <a href="https://www.facebook.com/Deliveroo/">
-                <img
-                  src="assets\svg\facebook-icon.svg"
-                  alt="facebook"
-                  height="24"
-                  width="24"
-                  class="change-my-color"
-                />
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://twitter.com/i/flow/login?redirect_after_login=%2FDeliveroo%3Fref_src%3Dtwsrc%255Egoogle%257Ctwcamp%255Eserp%257Ctwgr%255Eauthor"
-              >
-                <img
-                  src="assets\svg\twitter-svgrepo-com.svg"
-                  alt="twitter"
-                  height="24"
-                  width="24"
-                  class="dc__img"
-                />
-              </a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/deliveroo/?hl=en">
-                <img
-                  src="assets\svg\instagram-svgrepo-com.svg"
-                  alt="instagram"
-                  height="24"
-                  width="24"
-                  class="dc__img"
-                />
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="grid-item">
+    <div class="row">
+      <div class="d-flex justify-content: space-between">
+        <ul class="list-unstyled mb-0 list-group list-group-horizontal">
+          <li style="padding-left: 2px">
+            <a href="https://www.facebook.com/Deliveroo/">
+              <img
+                src="assets\svg\facebook-icon.svg"
+                alt="facebook"
+                height="24"
+                width="24"
+                class="change-my-color"
+              />
+            </a>
+          </li>
+          <li style="padding-left: 25px">
+            <a
+              href="https://twitter.com/i/flow/login?redirect_after_login=%2FDeliveroo%3Fref_src%3Dtwsrc%255Egoogle%257Ctwcamp%255Eserp%257Ctwgr%255Eauthor"
+            >
+              <img
+                src="assets\svg\twitter-svgrepo-com.svg"
+                alt="twitter"
+                height="24"
+                width="24"
+                class="dc__img"
+              />
+            </a>
+          </li>
+          <li style="padding-left: 25px">
+            <a href="https://www.instagram.com/deliveroo/?hl=en">
+              <img
+                src="assets\svg\instagram-svgrepo-com.svg"
+                alt="instagram"
+                height="24"
+                width="24"
+                class="dc__img"
+              />
+            </a>
+          </li>
+        </ul>
+        <div class="d-flex justify-content: space-betwee">
           <p class="dc__para">© 2023 Deliveroo</p>
         </div>
       </div>
