--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -8,7 +8,9 @@
           style="width: 144px; height: 32px"
         />
         <div class="d-flex justify-content-space-between">
-          <button mat-stroked-button>Partner with us</button>
+          <button mat-stroked-button class="d-none d-md-block">
+            Partner with us
+          </button>
           <button mat-stroked-button>
             <img src="assets\svg\home.svg" alt="menu" height="20" width="20" />
             Signup or login
