feat: header styles
header styles according to BEM and make signup button disappear for sm screen

--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -1,10 +1,16 @@
-.container {
-  justify-content: space-between;
-  padding-top: 14px;
-}
-.row {
-  flex-wrap: nowrap;
-}
-.d-flex {
-  justify-content: space-between;
+.dc {
+
+  &__header {
+    justify-content: space-between;
+    padding-top: 14px;
+  }
+
+  &__row {
+    flex-wrap: nowrap;
+  }
+
+  &__flex {
+    justify-content: space-between;
+  }
+
 }
