--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,17 +1,17 @@
 <header>
-  <div class="container">
-    <div class="row">
-      <div class="d-flex justify-content: space-between">
+  <div class="container dc__header">
+    <div class="row dc__row">
+      <div class="d-flex dc__flex">
         <img
           src="assets\svg\deliveroo-logo.svg"
           alt="deliveroo-logo"
           style="width: 144px; height: 32px"
         />
-        <div class="d-flex justify-content-space-between">
+        <div class="d-flex dc__flex">
           <button mat-stroked-button class="d-none d-md-block">
             Partner with us
           </button>
-          <button mat-stroked-button>
+          <button mat-stroked-button class="d-none d-sm-block">
             <img src="assets\svg\home.svg" alt="menu" height="20" width="20" />
             Signup or login
           </button>
