--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -1,1 +1,19 @@
-<p>signup-page works!</p>
+<div class="container p-5">
+  <div class="row d-flex justify-content-center">
+    <div
+      class="col-12 col-md-5 d-flex justify-content-center flex-column align-item-center"
+    >
+      <h1 class="dc__h1">Sign up or log in</h1>
+      <div class="dc__inputfield">
+        <p>Email address</p>
+        <input
+          class="dc__input"
+          type="email"
+          placeholder="e.g.name@example.com"
+        />
+      </div>
+      <button mat-button class="dc dc__continue">Continue</button>
+      <button mat-button class="dc dc__forgot">Forgot password</button>
+    </div>
+  </div>
+</div>
