--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -8,17 +8,30 @@
           style="width: 144px; height: 32px"
         />
         <div class="d-flex dc__flex">
-          <button mat-stroked-button class="d-none d-md-block">
+          <button mat-stroked-button class="d-none d-md-block dc__button">
             Partner with us
           </button>
-          <button mat-stroked-button class="d-none d-sm-block">
+          <button mat-stroked-button class="d-none d-sm-block dc__button">
             <img src="assets\svg\home.svg" alt="menu" height="20" width="20" />
             Signup or login
           </button>
-          <button mat-stroked-button>
+          <button mat-stroked-button class="dc__button">
             <img src="assets\svg\menu.svg" alt="menu" height="16" width="16" />
             Menu
           </button>
+          <mat-drawer-container class="example-container" autosize>
+            <mat-drawer #drawer class="example-sidenav" mode="side">
+              <!-- <button (click)="showFiller = !showFiller" mat-raised-button>
+                Toggle extra text
+              </button> -->
+            </mat-drawer>
+
+            <div class="example-sidenav-content">
+              <button type="button" mat-button (click)="drawer.toggle()">
+                Toggle sidenav
+              </button>
+            </div>
+          </mat-drawer-container>
         </div>
       </div>
     </div>
