--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -15,15 +15,21 @@
             <img src="assets\svg\home.svg" alt="menu" height="20" width="20" />
             Signup or login
           </button>
-          <button mat-stroked-button class="dc__button">
+          <button
+            mat-stroked-button
+            class="dc__button"
+            #openSideBar
+            (click)="sideBarOpen(openSideBar.value)"
+          >
             <img src="assets\svg\menu.svg" alt="menu" height="16" width="16" />
             Menu
           </button>
-          <mat-drawer-container class="example-container" autosize>
+
+          <!-- <mat-drawer-container class="example-container" autosize>
             <mat-drawer #drawer class="example-sidenav" mode="side">
-              <!-- <button (click)="showFiller = !showFiller" mat-raised-button>
+              <button (click)="showFiller = !showFiller" mat-raised-button>
                 Toggle extra text
-              </button> -->
+              </button>
             </mat-drawer>
 
             <div class="example-sidenav-content">
@@ -31,7 +37,7 @@
                 Toggle sidenav
               </button>
             </div>
-          </mat-drawer-container>
+          </mat-drawer-container> -->
         </div>
       </div>
     </div>
