--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,16 +1,15 @@
 .example-container {
-  width: 500px;
-  height: 300px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  height: 100;
+  flex-direction: column;
 }
 
-.example-sidenav-content {
-  display: flex;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-}
+// .example-sidenav-content {
+//   display: flex;
+//   height: 100%;
+//   align-items: center;
 
-.example-sidenav {
-  padding: 20px;
-}
+// }
+
+// .example-sidenav {
+//   padding: 20px;
+// }
