--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -2,20 +2,25 @@
   <div class="container dc__header">
     <div class="row dc__row">
       <div class="d-flex dc__flex">
-        <img
-          src="assets\svg\deliveroo-logo.svg"
-          alt="deliveroo-logo"
-          style="width: 144px; height: 32px"
-        />
+        <a routerLink="/"
+          ><img
+            src="assets\svg\deliveroo-logo.svg"
+            alt="deliveroo-logo"
+            style="width: 144px; height: 32px"
+        /></a>
         <div class="d-flex dc__flex">
           <button mat-stroked-button class="d-none d-md-block dc__button">
             Partner with us
           </button>
-          <button mat-stroked-button class="d-none d-sm-block dc__button">
+          <button
+            mat-stroked-button
+            class="d-none d-sm-block dc__button"
+            (click)="onLoadLogin()"
+          >
             <img src="assets\svg\home.svg" alt="menu" height="20" width="20" />
             Signup or login
           </button>
-          <button mat-stroked-button class="dc__button" (click)="toggle()">
+          <button mat-stroked-button class="dc__button" (click)="onLoadMenu()">
             <img src="assets\svg\menu.svg" alt="menu" height="16" width="16" />
             Menu
           </button>
