--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -21,9 +21,8 @@
         Continue with Apple
       </button>
       <p class="dc__line">or</p>
-      <button mat-button class="dc__button--green">
+      <button mat-button class="dc__button--green" (click)="onLoadSignin()">
         <img src="assets\svg\email-icon.svg" alt="Email" height="24px" /><a
-          (click)="isLogin()"
           href=""
         ></a>
         Continue with email
