--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -20,7 +20,7 @@
             <img src="assets\svg\home.svg" alt="menu" height="20" width="20" />
             Signup or login
           </button>
-          <button mat-stroked-button class="dc__button" (click)="onLoadMenu()">
+          <button mat-stroked-button class="dc__button" (click)="toggle()">
             <img src="assets\svg\menu.svg" alt="menu" height="16" width="16" />
             Menu
           </button>
