feat: continue with email button & input field fix
fixed continue with email button of load without changing the url and fixed the width of the input  field

--- a/src/app/pages/signup-page/signup-page.component.scss
+++ b/src/app/pages/signup-page/signup-page.component.scss
@@ -1,12 +1,14 @@
 .dc {
 
-  &__input {
+  &__input{
     border: 1px solid #e8ebeb;
-    padding-left: 164px;
+    width: 420px;
+    padding: 12px 16px;
     padding-bottom: 16px;
     margin-bottom: 14px;
     height: 46;
     width: 346;
+    border-radius: 4px;
   }
   &__continue {
     font-weight: 600;
