feat: input field responsiveness
fixed input field responsiveness

--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -6,14 +6,20 @@
       <h1 class="dc__h1">Sign up or log in</h1>
       <div class="dc__inputfield">
         <p>Email address</p>
-        <input
-          class="dc__input"
-          type="email"
-          placeholder="e.g.name@example.com"
-        />
+        <div class="row">
+          <input
+            class="dc__input"
+            type="email"
+            placeholder="e.g.name@example.com"
+          />
+        </div>
+        <div class="row">
+          <button mat-button class="dc dc__continue">Continue</button>
+        </div>
+        <div class="row">
+          <button mat-button class="dc dc__forgot">Forgot password</button>
+        </div>
       </div>
-      <button mat-button class="dc dc__continue">Continue</button>
-      <button mat-button class="dc dc__forgot">Forgot password</button>
     </div>
   </div>
 </div>
