feat: signup page continue button validation
In Sign up page, continu button only enable to click when type the correct email address in the input field

--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -3,23 +3,36 @@
     <div
       class="col-12 col-md-5 d-flex justify-content-center flex-column align-item-center"
     >
-      <h1 class="dc__h1">Sign up or log in</h1>
-      <div class="dc__inputfield">
-        <p>Email address</p>
-        <div class="row">
-          <input
-            class="dc__input"
-            type="email"
-            placeholder="e.g.name@example.com"
-          />
+      <form (ngSubmit)="onSubmit(f)" #f="ngForm">
+        <h1 class="dc__h1">Sign up or log in</h1>
+        <div class="dc__inputfield">
+          <p>Email address</p>
+          <div class="row">
+            <input
+              class="form-control dc__input"
+              type="email"
+              placeholder="e.g.name@example.com"
+              ngModel
+              name="email"
+              required
+              email
+            />
+          </div>
+          <div class="row">
+            <button
+              mat-button
+              type="submit"
+              class="dc dc__continue"
+              [disabled]="!f.valid"
+            >
+              Continue
+            </button>
+          </div>
+          <div class="row">
+            <button mat-button class="dc dc__forgot">Forgot password</button>
+          </div>
         </div>
-        <div class="row">
-          <button mat-button class="dc dc__continue">Continue</button>
-        </div>
-        <div class="row">
-          <button mat-button class="dc dc__forgot">Forgot password</button>
-        </div>
-      </div>
+      </form>
     </div>
   </div>
 </div>
