--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,7 +11,8 @@
     min-height: 48px;
     padding: 12px 24px;
     font-weight: 600;
-    font-size: 16px
+    font-size: 16px;
+    margin-bottom: 16px;
   }
 
   &__navtext {
@@ -19,7 +20,8 @@
     text-decoration: none;
   }
 
-  &__faqtext {
+  &__faqs {
+    display: flex;
     color: #2e3333;
     text-decoration: none;
     font-size: 16px;
@@ -29,6 +31,7 @@
 
   &__sidebar {
     width: 375px;
+    position: fixed;
   }
 
   &__nav-icons {
@@ -37,12 +40,24 @@
     padding-left: 25px;
   }
 
-  // &__x-icon {
-  //   pointer-events: none;
-  // }
+  &__faqs-text {
+    padding-left: 16px;
+  }
+
+  &__faqs-text:hover {
+    color: #00ccbc;
+  }
+
+  &__lables{
+    align-items: end;
+  }
 
   &__sidenav {
-    padding: 8px 0 8px 24px;
+    padding-top: 16px;
   }
+
+  // &__language {
+  //   background-color: transparent !important;
+  // }
 }
 
