--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -9,21 +9,57 @@
             style="width: 144px; height: 32px"
         /></a>
         <div class="d-flex dc__flex">
-          <button mat-stroked-button class="d-none d-md-block dc__button">
-            Partner with us
-          </button>
-          <button
-            mat-stroked-button
-            class="d-none d-sm-block dc__button"
-            (click)="onLoadLogin()"
-          >
-            <img src="assets\svg\home.svg" alt="menu" height="20" width="20" />
-            Signup or login
-          </button>
-          <button mat-stroked-button class="dc__button" (click)="toggle()">
-            <img src="assets\svg\menu.svg" alt="menu" height="16" width="16" />
-            Menu
-          </button>
+          <div style="padding-right: 4px">
+            <button
+              mat-stroked-button
+              class="dropdown-toggle d-none d-md-block dc__button"
+              type="button"
+              id="dropdownMenuButton"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Partner with us
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </div>
+          <div style="padding: 0px 4px 0px 4px">
+            <button
+              mat-stroked-button
+              class="d-none d-sm-block dc__button"
+              (click)="onLoadLogin()"
+            >
+              <img
+                src="assets\svg\home.svg"
+                alt="signup"
+                height="17"
+                width="17"
+                style="margin-bottom: 3px"
+              />
+              Signup or login
+            </button>
+          </div>
+          <div style="padding-left: 4px">
+            <button
+              mat-stroked-button
+              class="dc__button"
+              (click)="toggle()"
+              style="margin-bottom: 3px"
+            >
+              <img
+                src="assets\svg\menu.svg"
+                alt="menu"
+                height="15px"
+                width="15px"
+                style="margin-bottom: 3px"
+              />
+              Menu
+            </button>
+          </div>
         </div>
       </div>
     </div>
