feat: home page search bar fix
home page search bar appearance fix

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -22,7 +22,11 @@
                         height="15px"
                       />
                     </button>
-                    <input matInput placeholder="e.g. EC4R 3TE" />
+                    <input
+                      matInput
+                      placeholder="e.g. EC4R 3TE"
+                      style="width: fit-content"
+                    />
                     <button mat-button class="dc__searchbtn">Search</button>
                   </mat-form-field>
                 </p>
