--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -99,7 +99,8 @@
                 <img
                   src="assets\svg\app store.svg"
                   alt="AppStore"
-                  height="40"
+                  height="47px"
+                  width="135px"
                 />
               </a>
             </li>
@@ -109,9 +110,10 @@
                 href="https://play.google.com/store/apps/details?id=com.deliveroo.orderapp&hl=en&gl=US&pli=1"
               >
                 <img
-                  src="assets\svg\google play store.svg"
+                  src="assets\svg\Google_Play_Store_badge_EN.svg"
                   alt="google play store"
-                  height="120"
+                  height="41px"
+                  width="135px"
                 />
               </a>
             </li>
